Changes to STM32F4 Standard Peripheral Library
----------------------------------------------

$Id$

1. Imported STM32F4 Standard Peripheral Libary V1.5.0, except for
   useless prebuilt libraries in Libraries/CMSIS/Lib.