@@ -113,6 +113,7 @@
 
 /* Exported macro ------------------------------------------------------------*/
 #ifdef  USE_FULL_ASSERT
+#include <assert.h>
 
 /**
   * @brief  The assert_param macro is used for function's parameters check.
@@ -122,9 +123,9 @@
   *   If expr is true, it returns no value.
   * @retval None
   */
-  #define assert_param(expr) ((expr) ? (void)0 : assert_failed((uint8_t *)__FILE__, __LINE__))
-/* Exported functions ------------------------------------------------------- */
-  void assert_failed(uint8_t* file, uint32_t line);
+
+  // Use newlib assert()
+  #define assert_param(expr) (assert(expr))
 #else
   #define assert_param(expr) ((void)0)
 #endif /* USE_FULL_ASSERT */
